; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/fs/fuse/extr_dir.c_fuse_get_attr_version.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/fs/fuse/extr_dir.c_fuse_get_attr_version.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.fuse_conn = type { i32, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @fuse_get_attr_version(%struct.fuse_conn* %0) #0 {
  %2 = alloca %struct.fuse_conn*, align 8
  %3 = alloca i32, align 4
  store %struct.fuse_conn* %0, %struct.fuse_conn** %2, align 8
  %4 = load %struct.fuse_conn*, %struct.fuse_conn** %2, align 8
  %5 = getelementptr inbounds %struct.fuse_conn, %struct.fuse_conn* %4, i32 0, i32 0
  %6 = call i32 @spin_lock(i32* %5)
  %7 = load %struct.fuse_conn*, %struct.fuse_conn** %2, align 8
  %8 = getelementptr inbounds %struct.fuse_conn, %struct.fuse_conn* %7, i32 0, i32 1
  %9 = load i32, i32* %8, align 4
  store i32 %9, i32* %3, align 4
  %10 = load %struct.fuse_conn*, %struct.fuse_conn** %2, align 8
  %11 = getelementptr inbounds %struct.fuse_conn, %struct.fuse_conn* %10, i32 0, i32 0
  %12 = call i32 @spin_unlock(i32* %11)
  %13 = load i32, i32* %3, align 4
  ret i32 %13
}

declare dso_local i32 @spin_lock(i32*) #1

declare dso_local i32 @spin_unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
